[package]
name = "ssh-git-fw"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "1.1.2"
russh = "0.61.1"
env_logger = "0.11"
log = "0.4.11"
tokio = { version = "1.17.0" }
rand = { version = "0.10", features = ["thread_rng"] }
fast-socks5 = "1.0.0"
dashmap = "6.2.1"
bytes = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
structopt = "0.3.26"
shlex = "2.0.1"
gtk4 = "0.11.3"
async-channel = "2.5.0"
